--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,16 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
     }
+
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
     def nav_version = "2.3.0"
     def retrofit_version = "2.9.0"
+    def lifecycle_version = "2.2.0"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -55,6 +60,9 @@ dependencies {
 //    For fragments navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+//    ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
 //    For retrofit api http client
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
